# YANPD

./: .gitignore  .pre-commit-config.yaml  README.md  pylintrc  pyproject.toml
test/: config.py  test_neoconnector.py  test_yang_validator.py
test/models/telecom-network/: telecom-network.yang
yanpd/: __init__.py  neoconnector.py  yang_validator.py
yanpd/models/: telecom_network.yang
