[tool.poetry]
name = "yanpd"
version = "0.1.0"
description = "Yet Another Neo4j Python Driver"
authors = ["Denis <d.mulyalin@gmail.com>"]
license = "MIT"

readme = "README.md"
homepage = "https://github.com/dmulyalin/YANPD"
repository = "https://github.com/dmulyalin/YANPD"
documentation = "https://github.com/dmulyalin/YANPD"
keywords = ["Neo4j", "Python"]
classifiers = [
    "Topic :: Utilities",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
]

[tool.poetry.dependencies]
python = "^3.7"
yangson = "^1.4.13"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
bandit = "1.7.*"
black = "22.3.*"
flake8 = "4.0.*"
pre-commit = "2.15.*"
pyenchant = "3.2.*"
pylint = "2.12.*"
pytest = { version = "^7.1.*", markers = "python_version >= '3.7'" }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
